new feature: flash card export
